--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+@custom-variant dark (&:where(.dark, .dark *));
 body {
   font-family: "Inter", sans-serif;
 }
